force-app/main/default/objects/RD_Girdle_Cover_Part_Number__c/fields/Girdle_Cover_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Girdle_Cover_Part_Number__c</fullName>
    <label>Girdle Cover Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>