force-app/main/default/objects/RD_Girdle_Cover_Part_Number__c/fields/MatlCode__c.field-meta.xml
<CustomField>
    <fullName>MatlCode__c</fullName>
    <label>MatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>