force-app/main/default/objects/RD_Girdle_Cover_Part_Number__c/fields/Sourcing_Code__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Code__c</fullName>
    <label>Sourcing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>