force-app/main/default/objects/RD_Girdle_Cover_Part_Number__c/fields/Thick_Code__c.field-meta.xml
<CustomField>
    <fullName>Thick_Code__c</fullName>
    <label>Thick Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>