force-app/main/default/objects/RD_Girdle_Cover_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Thickness__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>